--- a/src/styles/homaPage.css
+++ b/src/styles/homaPage.css
@@ -3,6 +3,7 @@
   padding: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 30px;
 }
 
 .header h1 {
@@ -54,34 +55,152 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
+  /* border: 1px solid black; */
+  width: 100%;
+  margin-top: 100px;
+  margin: auto;
+  background-color: rgba(146,43,225,1) 50%;
 }
 
 .box-1 {
+  background-color: cornsilk;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
   text-align: center;
-  /* border: 1px solid black; */
   justify-content: center;
   align-items: center;
-  height: 200px;
-  margin: auto;
-  width:90%;
+  width: 80%;
+  margin: 10px auto;
 }
-.box-2 {
-  text-align: center;
-  border: 1px solid black;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  margin: auto;
-  width:90%;
-}
-.box-3 {
-  text-align: center;
-  border: 1px solid black;
-  height: 200px;
-  margin: auto;
-  width:90%;
-}
-.box-1 > img{
-  width: 300px;
+/* ------ */
+.box-1>img {
   height: 100px;
+  width: 100px;
+  margin: 10px auto;
 }
+
+.box-1>h2 {
+  color: black;
+}
+
+.box-1>p {
+  color: black;
+}
+/* -------- */
+
+.box-2 {
+  background-color: cornsilk;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+}
+.box-2>img {
+  height: 100px;
+  width: 100px;
+  margin: 10px auto;
+}
+.box-2>h2 {
+  color: black;
+}
+
+.box-2>p {
+  color: black;
+}
+/* ------- */
+.box-3 {
+  background-color: cornsilk;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+}
+.box-3>img {
+  height: 100px;
+  width: 100px;
+  margin: 10px auto;
+}
+.box-3>h2 {
+  color: black;
+}
+
+.box-3>p {
+  color: black;
+}
+
+/* ----- */
+.box-4{
+  background-color: cornsilk;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+}
+.box-4>img {
+  height: 100px;
+  width: 100px;
+  margin: 10px auto;
+}
+.box-4>h2 {
+  color: black;
+}
+
+.box-4>p {
+  color: black;
+}
+/* ------ */
+.box-5{
+  background-color: cornsilk;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+}
+.box-5>img {
+  height: 100px;
+  width: 100px;
+  margin: 10px auto;
+}
+.box-5>h2 {
+  color: black;
+}
+
+.box-5>p {
+  color: black;
+}
+/* ------ */
+.box-6{
+  background-color: cornsilk;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 10px auto;
+}
+.box-6>img {
+  height: 100px;
+  width: 100px;
+  margin: 10px auto;
+}
+.box-6>h2 {
+  color: black;
+}
+
+.box-6>p {
+  color: black;
+}
+/* ----- */
