--- a/src/styles/homaPage.css
+++ b/src/styles/homaPage.css
@@ -59,7 +59,8 @@
   width: 100%;
   margin-top: 100px;
   margin: auto;
-  background-color: rgba(146,43,225,1) 50%;
+  background-color: rgba(146, 43, 225, 1) 50%;
+
 }
 
 .box-1 {
@@ -72,6 +73,7 @@
   width: 80%;
   margin: 10px auto;
 }
+
 /* ------ */
 .box-1>img {
   height: 100px;
@@ -86,6 +88,7 @@
 .box-1>p {
   color: black;
 }
+
 /* -------- */
 
 .box-2 {
@@ -98,11 +101,13 @@
   width: 80%;
   margin: 10px auto;
 }
+
 .box-2>img {
   height: 100px;
   width: 100px;
   margin: 10px auto;
 }
+
 .box-2>h2 {
   color: black;
 }
@@ -110,6 +115,7 @@
 .box-2>p {
   color: black;
 }
+
 /* ------- */
 .box-3 {
   background-color: cornsilk;
@@ -121,11 +127,13 @@
   width: 80%;
   margin: 10px auto;
 }
+
 .box-3>img {
   height: 100px;
   width: 100px;
   margin: 10px auto;
 }
+
 .box-3>h2 {
   color: black;
 }
@@ -135,7 +143,7 @@
 }
 
 /* ----- */
-.box-4{
+.box-4 {
   background-color: cornsilk;
   border-radius: 10px;
   box-shadow: 5px 5px 5px black;
@@ -145,11 +153,13 @@
   width: 80%;
   margin: 10px auto;
 }
+
 .box-4>img {
   height: 100px;
   width: 100px;
   margin: 10px auto;
 }
+
 .box-4>h2 {
   color: black;
 }
@@ -157,8 +167,9 @@
 .box-4>p {
   color: black;
 }
+
 /* ------ */
-.box-5{
+.box-5 {
   background-color: cornsilk;
   border-radius: 10px;
   box-shadow: 5px 5px 5px black;
@@ -168,11 +179,19 @@
   width: 80%;
   margin: 10px auto;
 }
+
 .box-5>img {
+  transition: all 0.4s;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 40px;
+  margin-inline-end: 40px;
   height: 100px;
   width: 100px;
   margin: 10px auto;
 }
+
 .box-5>h2 {
   color: black;
 }
@@ -180,8 +199,9 @@
 .box-5>p {
   color: black;
 }
+
 /* ------ */
-.box-6{
+.box-6 {
   background-color: cornsilk;
   border-radius: 10px;
   box-shadow: 5px 5px 5px black;
@@ -191,6 +211,7 @@
   width: 80%;
   margin: 10px auto;
 }
+
 .box-6>img {
   height: 100px;
   width: 100px;
@@ -199,8 +220,178 @@
 .box-6>h2 {
   color: black;
 }
-
 .box-6>p {
   color: black;
 }
-/* ----- */
+
+/* ----section-1--- */
+
+.section-1 {
+  padding: 10px;
+  box-shadow: 5px 5px 5px black;
+  gap: 10px;
+  background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
+  margin-top: 200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+}
+
+.sec-1>img {
+  width: 100%;
+  height: 500px;
+}
+.sec-2>h1 {
+  font-size: xx-large;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 50px 10px;
+  color: black;
+}
+.sec-2>form>input {
+  width: 90%;
+  padding: 10px;
+  margin: 5px 10px;
+  color: black;
+}
+.sec-2>form>textarea {
+  width: 90%;
+  padding: 10px;
+  margin: 5px 10px;
+  color: black;
+}
+
+
+/* ----aboutSection----- */
+.aboutSection {
+  margin: 150px 0px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.image {
+  width: 100%;
+}
+.image>img {
+  width: 100%;
+}
+.aboutdetails {
+  width: 90%;
+  margin: auto;
+  padding: 10px;
+}
+.aboutdetails>h1 {
+  color: black;
+}
+.aboutdetails>p {
+  color: black;
+}
+.aboutdetails>Link {
+  border: 1px solid black;
+  background-color: darkblue;
+}
+
+
+/* -----companyDetails---- */
+.companyDetails{
+  display: grid;
+  grid-template-columns: 1fr 1fr ;
+  width: 100%;
+  box-shadow: 5px 5px 5px   black;
+  border: 1px solid black;
+  background-color: cornsilk;
+  margin: 50px 0px;
+  padding: 10px;
+  margin-bottom: 100px;
+}
+.grid-1{
+  width: 80%;
+  padding: 10px;
+}
+.grid-1 > h1 {
+  color: black;
+  font-weight: 400;
+  margin-bottom: 40px;
+}
+.grid-1 > h2 {
+  color: blue;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.grid-1 > h3 {
+  color: black;
+  font-weight:bolder;
+  font-size: larger;
+}
+.grid-1 > p {
+  color: black;
+  line-height: 30px;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.values{
+  margin-top: 50px;
+  margin-left: 30px;
+}
+.value{
+  margin: 20px 70px;
+}
+.grid-2 > img{
+  width: 100%;
+  margin: 152px -72px;
+}
+
+
+/* -------FooterSection------ */
+
+.footerSection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color:rgb(218, 206, 182);
+  box-shadow: 5px 5px 5px 3px  black;
+  padding: 10px;
+
+}
+.col-1 {
+  padding: 10px;
+  margin-left: 10px;
+}
+.col-1>h2 {
+  color: black;
+  font-size: xx-large;
+  margin: 10px 0px;
+}
+.col-1>ul>li{
+  padding: 10px;
+  color:rgb(56, 53, 53);
+
+}
+.foo {
+  color:rgb(56, 53, 53);
+  padding: 10px;
+  
+}
+
+.col-2 {
+  padding: 10px;
+}
+.col-2>h2 {
+  color: black;
+  font-size: xx-large;
+  margin: 10px 0px;
+}
+.col-2>ul>li{
+  padding: 10px;
+  color:rgb(56, 53, 53);
+}
+
+.col-3{
+  padding: 10px;
+}
+.col-3>h2 {
+  color: black;
+  font-size: xx-large;
+  margin: 10px 0px;
+}
+.col-3>ul>li{
+  padding: 10px;
+  color:rgb(56, 53, 53);
+
+}
