--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -7,19 +5,24 @@
   font-family: "Montserrat";
   color: white;
 }
-html, body {
+
+html,
+body {
   min-height: 100%;
 }
+
 body {
-  background: radial-gradient(at top left, rgba(146,43,225,1) 0%, rgba(43,9,107,1) 100%);
+  background: radial-gradient(at top left, rgba(146, 43, 225, 1) 0%, rgba(43, 9, 107, 1) 100%);
   background-repeat: no-repeat;
 }
+
 p {
   margin: 16px auto;
   line-height: 1.5em;
 }
-#img1{
-    max-width: 100%;
+
+#img1 {
+  max-width: 100%;
 }
 
 /* layout & nav */
@@ -27,21 +30,18 @@ p {
   max-width: 1200px;
   margin: 0 auto;
 }
+
 nav {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 40px auto;
 }
 
-/* nav >img{
-  height: 100px;
-  width: 100px;
-} */
-
 nav .links {
   display: inline-block;
   text-align: right;
 }
+
 nav a {
   display: inline-block;
   margin-left: 20px;
@@ -49,11 +49,61 @@ nav a {
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
 }
+
 nav a:hover {
   border-color: white;
 }
-.footer p{
+
+.footer p {
   text-align: center;
   justify-content: center;
   color: #bbb;
+}
+
+/* --------------@media-mobile------------ */
+@media only screen and (max-width:700px) {
+  nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  nav>h2 {
+    display: block;
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  nav .links {
+    display: block;
+    text-align: center;
+  }
+
+  nav a {
+    display: inline-block;
+    margin-left: 20px;
+    font-weight: 400;
+    padding-bottom: 8px;
+    border-bottom: 3px solid transparent;
+  }
+
+  nav a:hover {
+    border-color: white;
+  }
+
+  .footer p {
+    display: block;
+    text-align: center;
+    justify-content: center;
+    color: #bbb;
+  }
+
+  #img1 {
+    display: block;
+    max-width: 100%;
+  }
+
 }
