--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -1,5 +1,6 @@
 .portfolio {
     text-align: center;
+    border: 1px solid black;
   }
   .portfolio > h2 {
     font-size: 3em;
@@ -8,4 +9,13 @@
   .portfolio > h3 {
     font-size: 2em;
     font-weight: 400;
+    border: 1px solid black;
+  }
+
+
+
+  @media only screen and (max-width:700px) {
+    .portfolio {
+      border: 1px solid black;
+    }
   }
