--- a/src/styles/homaPage.css
+++ b/src/styles/homaPage.css
@@ -7,34 +7,12 @@
 }
 
 .header h1 {
-  font-size: 50px;
+ font-size: 100px; 
   padding: 10px;
   text-align: left;
+  font-weight:100;
 }
 
-.header h3 {
-  font-size: 40px;
-  padding: 10px;
-  text-align: left;
-}
-
-.btn {
-  background-color: darkorchid;
-  padding: 10px;
-  margin-top: 100px;
-  border-radius: 20px;
-}
-
-.header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 40px;
-  align-items: center;
-}
-
-.header h2 {
-  font-size: 4em;
-}
 
 .header h3 {
   font-size: 3em;
@@ -44,9 +22,9 @@
 
 .header .btn {
   display: inline-block;
-  background-color: #f032a459;
+  background-color: #f707ff59;
   padding: 10px 16px;
-  border-radius: 10px;
+  border-radius: 50px;
   margin-top: 20px;
   font-weight: 500;
 }
@@ -55,7 +33,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  /* border: 1px solid black; */
   width: 100%;
   margin-top: 100px;
   margin: auto;
@@ -72,8 +49,8 @@
   padding: 10px;
 }
 .box-heading>h1{
-  color: black;
-  border-bottom: 1px solid black ;
+  color: rgb(255, 225, 2);
+  border-bottom: 1px solid rgb(39, 34, 34) ;
   font-size:50px;
 }
 
@@ -97,6 +74,7 @@
 
 .box-1>h2 {
   color: black;
+  
 }
 
 .box-1>p {
@@ -305,7 +283,8 @@
 }
 .aboutdetails .btn {
   background-color: rgb(253, 22, 195);
-  margin:50px 150px;
+  padding: 10px;
+  border-radius: 20px;
 }
 
 
