--- a/src/styles/project-details.css
+++ b/src/styles/project-details.css
@@ -1,18 +1,29 @@
 .details h2 {
-    font-size: 3.5em;
-    margin-top: 80px;
+  font-size: 3.5em;
+  margin-top: 80px;
+}
+
+.details h3 {
+  font-size: 2em;
+  font-weight: 400;
+  margin-bottom: 40px;
+}
+
+.html {
+  margin-top: 40px;
+}
+
+.featured {
+  margin-bottom: 40px;
+}
+
+.innerimg {
+  height: 300px;
+}
+
+
+@media only screen and (max-width:700px) {
+  .details {
+    padding: 10px
   }
-  .details h3 {
-    font-size: 2em;
-    font-weight: 400;
-    margin-bottom: 40px;
-  }
-  .html {
-    margin-top: 40px;
-  }
-  .featured {
-    margin-bottom: 40px;
-  }
-  .innerimg{
-    height: 300px;
-  }
+}
