--- a/src/styles/about-details.css
+++ b/src/styles/about-details.css
@@ -44,7 +44,9 @@
 .row-2-image {
     width: 100%;
 }
-
+.row-2-image >img{
+    width: 100%;
+}
 
 @media only screen and (max-width:700px) {
     .about-heading {
