--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,8 +6,7 @@
   color: white;
 }
 
-html,
-body {
+html,body {
   min-height: 100%;
 }
 
@@ -30,10 +29,9 @@ p {
   max-width: 1200px;
   margin: 0 auto;
   padding: 10px;
-
 }
 
-nav {
+nav{
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 40px auto;
